[project]
name = "inorbit"
version = "0.1.0"
description = "ESGI Spark Streaming project - Satellite tracking"
authors = [
    {name = "artorius104",email = "divin.badiabo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "sgp4 (>=2.24,<3.0)",
    "datetime (>=5.5,<6.0)",
    "cartopy (>=0.24.1,<0.25.0)"
]

[project.scripts]
test-tle = "inorbit.test_tle:main"

[tool.poetry]
packages = [{include = "inorbit", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
